--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <div class="lesson">
         <span> Array </span>
         <div class="lesson-links">
-          <a href="/1/index.html"> Exercise 1</a>
-          <a href="/2/index.html"> Exercise 2</a>
-          <a href="/3/index.html"> Special Array </a>
-          <a href="/schoolData/"> School Data</a>
+          <a href="https://fateme-hp.github.io/js-practice-1"> Exercise 1</a>
+          <a href="https://fateme-hp.github.io/js-practice-2/"> Exercise 2</a>
+          <a href="https://fateme-hp.github.io/js-practice-3/"> Special Array </a>
+          <a href="https://fateme-hp.github.io/js-practice-schooldata/"> School Data</a>
         </div>
       </div>
     </div>
