adding lesson 6 exercise

--- a/index.html
+++ b/index.html
@@ -12,15 +12,24 @@
       <h1>JAVASCRIPT COURSE 2022</h1>
         <p> Fateme Hosseinipour </p>
       
-      <div class="lesson">
-        <span> Array </span>
-        <div class="lesson-links">
-          <a href="https://fateme-hp.github.io/js-practice-1"> Exercise 1</a>
-          <a href="https://fateme-hp.github.io/js-practice-2/"> Exercise 2</a>
-          <a href="https://fateme-hp.github.io/js-practice-3/"> Special Array </a>
-          <a href="https://fateme-hp.github.io/js-practice-schooldata/"> School Data</a>
-        </div>
-      </div>
+<div id="practice">
+  <div class="lesson">
+    <span> Array </span>
+    <div class="lesson-links">
+      <a href="https://fateme-hp.github.io/js-practice-1"> Exercise 1</a>
+      <a href="https://fateme-hp.github.io/js-practice-2/"> Exercise 2</a>
+      <a href="https://fateme-hp.github.io/js-practice-3/"> Special Array </a>
+      <a href="https://fateme-hp.github.io/js-practice-schooldata/"> School Data</a>
     </div>
+</div>
+<div class="lesson">
+  <span>String Methods </span>
+  <div class="lesson-links">
+    <a href="https://fateme-hp.github.io/js-practice-indexof/"> Index Of</a>
+    <a href="https://fateme-hp.github.io/js-practice-repeat/"> Repeat</a>
+    <a href="https://fateme-hp.github.io/js-practice-repeat-func/"> Repeat Function </a>
+  </div>
+</div>
+</div>
   </body>
 </html>
