add recent projects

--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     <a href="https://fateme-hp.github.io/js-practice-repeat-func/"> Repeat Function </a>
   </div>
 </div>
+<div class="lesson">
+  <span>Mini Projects </span>
+  <div class="lesson-links">
+    <a href="https://fateme-hp.github.io/IQTest/"> IQ Test </a>
+    <a href="https://fateme-hp.github.io/notepad/"> Note </a>
+    <a href="https://fateme-hp.github.io/ageCalc/"> Age Calculator </a>
+    <a href="https://fateme-hp.github.io/validateEmail/"> Email Validation </a>
+  </div>
+</div>
 </div>
   </body>
 </html>
